insert the video demo

--- a/NEP.html
+++ b/NEP.html
@@ -297,7 +297,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title"><img id="logo" width="5%" src="./NEP_files/icon_6.jpg">  NEP: Autoregressive Image Editing via <u>N</u>ext <u>E</u>uditing Token <u>P</u>rediction </h1>
+          <h1 class="title is-1 publication-title"><img id="logo" width="5%" src="./NEP_files/icon_6.jpg">  NEP: Autoregressive Image Editing via <u>N</u>ext <u>E</u>diting Token <u>P</u>rediction </h1>
           <!-- <h1 class="title is-4 publication-title">NeurIPS 2025</h1> -->
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -370,7 +370,7 @@
           <br>
           <h2 class="subtitle has-text-justified">
             <b>TL;DR:</b> 
-            We propose NEP, a targeted and efficient image editing method. It allows regeneration solely at edited regions and makes self-improvement during the image generation process possible.
+            We propose NEP, a targeted and efficient image editing method. It allows regeneration solely at edited regions, which avoids unintended modification and enhances efficiency. Besides, it makes self-improvement during the image generation process possible.
 
           </h2>
           <img width="65%" src="./NEP_files/fig_teaser_cmp_magicbrush.jpg">
@@ -462,6 +462,7 @@
   </div></div></div></section>
 
 
+<!-- 
 <section class="section">
   <div class="container is-max-desktop">
     <!-- Abstract. -->
@@ -482,6 +483,14 @@
   </div>
 
 </div></div></section>
+
+
+-->
+
+<video controls width="100%">
+    <source src="NEP_files/NEP_video_demo_wt_subtitle.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
       
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
