insert the video demo

--- a/NEP.html
+++ b/NEP.html
@@ -465,7 +465,6 @@
 <!-- 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column">
         <h2 class="title is-3">Video Demo</h2>
@@ -477,17 +476,13 @@
         </iframe>
       </div>
     </div>
-
-
-
   </div>
+</div></div></section>-->
 
-</div></div></section>
+<!-- <video controls width="40%">-->
 
 
--->
-
-<video controls width="100%">
+<video controls style="width: 1024px; height: auto; display: block; margin: 0 auto;">
     <source src="NEP_files/NEP_video_demo_wt_subtitle.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
