--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="TODO" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://arxiv.org/abs/2508.06044" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
@@ -405,7 +405,7 @@
     </div>
     <img width="95%" src="./NEP_files/fig_overview.jpg">
     <br>
-    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="left">Figure 2. Overview of Next-Editing-token Prediction. The input sequence is comprised of: 1) <span style="color: rgb(162,32,59);">text embeddings</span>, extracted from FLAN-T5, 2) <span style="color: rgb(39,79,44);">source image embeddings</span>, tokenized by VQGAN, and 3) <span style="color: rgb(70,177,225);">mask embeddings</span>, a sequence of interleaved editing and non-editing embeddings. The output <span style="color: rgb(186,177,141);">editing tokens</span> (in raster scan order) are filled back to the source image based on the editing mask. </figcaption>
+    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="left">Figure 1. Overview of Next-Editing-token Prediction. The input sequence is comprised of: 1) <span style="color: rgb(162,32,59);">text embeddings</span>, extracted from FLAN-T5, 2) <span style="color: rgb(39,79,44);">source image embeddings</span>, tokenized by VQGAN, and 3) <span style="color: rgb(70,177,225);">mask embeddings</span>, a sequence of interleaved editing and non-editing embeddings. The output <span style="color: rgb(186,177,141);">editing tokens</span> (in raster scan order) are filled back to the source image based on the editing mask. </figcaption>
 </div></div></div></section>
 
 
@@ -434,7 +434,7 @@
     </div>
     <br>
     <img width="80%" src="./NEP_files/fig_zero_shot_editing.jpg" class="center">
-    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="center">Figure 3. Examples of RLlamaGen's zero-shot editing capability. It can make fine-grained edits such as adding external objects (ice cream in example #1), changing the state of input objects (cabinet door open → closed in example #2), changing the semantics (chips → fries in example #3), and changing the color (white → red in example #4). </figcaption>
+    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="center">Figure 2. Examples of RLlamaGen's zero-shot editing capability. It can make fine-grained edits such as adding external objects (ice cream in example #1), changing the state of input objects (cabinet door open → closed in example #2), changing the semantics (chips → fries in example #3), and changing the color (white → red in example #4). </figcaption>
 
 
 
@@ -447,7 +447,7 @@
   </div>
     <br>
     <img width="80%" src="./NEP_files/fig_qualitative_compare.jpg" class="center">
-    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="center">Figure 4. Comparative editing results. This demonstrates that our approach can make more faithful edits to source images, either by updating objects (case #1, #2), or making fine-grained edits (case #3). </figcaption>
+    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="center">Figure 3. Comparative editing results. This demonstrates that our approach can make more faithful edits to source images, either by updating objects (case #1, #2), or making fine-grained edits (case #3). </figcaption>
 
 
 
@@ -463,7 +463,7 @@
   </div>
     <br>
     <img width="95%" src="./NEP_files/fig_self_improving.jpg" class="center">
-    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="center">Figure 5. Comparative editing results. This demonstrates that NEP can make more faithful edits to source images, either by updating objects (case #1, #2), or making fine-grained edits (case #3). </figcaption>
+    <figcaption style="font-size: 18px;font-family: &#39;Times New Roman&#39;, Times, serif;" align="center">Figure 4. Comparative editing results. This demonstrates that NEP can make more faithful edits to source images, either by updating objects (case #1, #2), or making fine-grained edits (case #3). </figcaption>
 
 
   </div></div></div></section>
